--- a/ParkCore/app/src/main/res/layout/activity_destination.xml
+++ b/ParkCore/app/src/main/res/layout/activity_destination.xml
@@ -40,6 +40,7 @@
         android:text="       destination name"
         android:textColor="#F5020202"
         android:textSize="36sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
