--- a/ParkCore/app/src/main/res/layout/activity_destination.xml
+++ b/ParkCore/app/src/main/res/layout/activity_destination.xml
@@ -32,7 +32,7 @@
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="53dp"
         android:ems="10"
