--- a/ParkCore/app/src/main/res/layout/activity_destination.xml
+++ b/ParkCore/app/src/main/res/layout/activity_destination.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Destination">
+    tools:context=".Destination"
+    android:background="@drawable/destinationbackground">
 
     //change
 
