--- a/ParkCore/app/src/main/res/layout/activity_spots__available.xml
+++ b/ParkCore/app/src/main/res/layout/activity_spots__available.xml
@@ -10,22 +10,53 @@
         android:id="@+id/scrollView2"
         android:layout_width="307dp"
         android:layout_height="532dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="134dp">
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
+        android:layout_marginBottom="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <LinearLayout
+            android:id="@+id/ParkingSpaceScroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="59dp"
+                android:text="Parking Lot 1"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="78dp"
+                android:text="Parking Lot 2"
+                android:textSize="24sp" />
+        </LinearLayout>
     </ScrollView>
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="336dp"
-        android:layout_height="74dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="311dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginLeft="53dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginBottom="29dp"
         android:text="Parking spaces found!"
         android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="37dp" />
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
