--- a/ParkCore/app/src/main/res/layout/activity_spots__available.xml
+++ b/ParkCore/app/src/main/res/layout/activity_spots__available.xml
@@ -43,7 +43,7 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="52dp"
                 android:text="Parking Lot 1   (0.4 mi)"
                 android:textSize="30sp" />
 
@@ -64,7 +64,72 @@
                 android:id="@+id/button4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="I want this spot!" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="296dp"
+                android:layout_height="53dp"
+                android:text="Parking Lot 3"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I want this spot!" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="296dp"
+                android:layout_height="56dp"
+                android:text="Parking Lot 4"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I want this spot!" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="296dp"
+                android:layout_height="53dp"
+                android:text="Parking Lot 5"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I want this spot!" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:text="Parking Lot 6"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I want this spot!" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:text="Parking Lot 7"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I want this spot!" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
