--- a/ParkCore/app/src/main/res/layout/activity_parking_spot.xml
+++ b/ParkCore/app/src/main/res/layout/activity_parking_spot.xml
@@ -25,19 +25,19 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="141dp"
-        android:layout_marginLeft="141dp"
+        android:layout_width="348dp"
+        android:layout_height="318dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginLeft="34dp"
         android:layout_marginTop="56dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginRight="142dp"
-        android:layout_marginBottom="446dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="34dp"
+        android:layout_marginRight="34dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="@id/textView12"
+        app:srcCompat="@drawable/empty"
+        tools:srcCompat="@drawable/empty" />
 
     <TextView
         android:id="@+id/textView13"
@@ -45,30 +45,29 @@
         android:layout_height="44dp"
         android:layout_marginStart="141dp"
         android:layout_marginLeft="141dp"
-        android:layout_marginTop="81dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
-        android:layout_marginBottom="46dp"
         android:text="Location:"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/GPS Coordinates"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/GPS Coordinates"
+        android:id="@+id/coords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="110dp"
         android:layout_marginLeft="110dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="46dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
-        android:layout_marginBottom="251dp"
+        android:layout_marginBottom="17dp"
         android:text="39.2557° N, 76.7110° W"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mapslink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -86,6 +85,7 @@
         android:text="Take Me There!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/GPS Coordinates" />
+        app:layout_constraintTop_toBottomOf="@+id/coords" />
 </androidx.constraintlayout.widget.ConstraintLayout>
