--- a/ParkCore/app/src/main/res/layout/content_main.xml
+++ b/ParkCore/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="117dp"
         android:layout_marginRight="117dp"
         android:layout_marginBottom="66dp"
-        android:text="ParkCore!"
+        android:text="ParkCore"
         android:textColor="#fcd12a"
         android:textSize="50sp"
         android:textStyle="bold"
