--- a/ParkCore/app/src/main/res/layout/activity_spots__available.xml
+++ b/ParkCore/app/src/main/res/layout/activity_spots__available.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Spots_Available">
+    tools:context=".Spots_Available"
+    android:background="#0e4d92">
+
 
     <TextView
         android:id="@+id/textView4"
@@ -16,6 +18,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
         android:text="Parking spaces found!"
+        android:textColor="#fdc12a"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -46,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:text="Parking Lot 1   (0.4 mi)"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -59,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:text="Parking Lot 2  (0.6 mi)"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -72,6 +77,7 @@
                 android:layout_width="296dp"
                 android:layout_height="53dp"
                 android:text="Parking Lot 3"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -85,6 +91,7 @@
                 android:layout_width="296dp"
                 android:layout_height="56dp"
                 android:text="Parking Lot 4"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -98,6 +105,7 @@
                 android:layout_width="296dp"
                 android:layout_height="53dp"
                 android:text="Parking Lot 5"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -111,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="53dp"
                 android:text="Parking Lot 6"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
@@ -124,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:text="Parking Lot 7"
+                android:textColor="#fdc12a"
                 android:textSize="30sp" />
 
             <Button
